--- a/mainapp/fixtures/mainapp.json
+++ b/mainapp/fixtures/mainapp.json
@@ -1,36 +1,107 @@
 [
 {
-  "model": "mainapp.hall",
-  "pk": 1,
-  "fields": {
-    "name": "Парикмахерский зал",
-    "short_description": "Парикмахерский зал",
-    "full_description": "Стрижка, укладка, прическа, окрашивание и т.д.",
-    "is_active": true
-  }
+    "model": "mainapp.hall",
+    "pk": 1,
+    "fields": {
+        "name": "Парикмахерский зал",
+        "short_description": "Парикмахерский зал",
+        "full_description": "Стрижка, укладка, прическа, окрашивание и т.д.",
+        "is_active": true
+    }
 },
 {
-  "model": "mainapp.categoryservice",
-  "pk": 1,
-  "fields": {
-    "name": "Стрижка",
-    "short_description": "Стрижка",
-    "full_description": "Стрижка женская",
-    "hall": 1,
-    "is_active": true
-  }
+    "model": "mainapp.hall",
+    "pk": 2,
+    "fields": {
+        "name": "Ногтевой сервис",
+        "short_description": "Ногтевой сервис – комплекс услуг по уходу за ногтями ног и рук.",
+        "full_description": "Ногтевой сервис – комплекс услуг по уходу за ногтями ног и рук. Профессиональный подход, специализированные и лицензированные средства гарантируют высокое качество маникюра. В салоне каждая женщина сможет подобрать подходящую процедуру по вкусу и цене.",
+        "is_active": true
+    }
 },
 {
-  "model": "mainapp.service",
-  "pk": 1,
-  "fields": {
-    "name": "Стрижка женская",
-    "short_description": "Стрижка женская",
-    "full_description": "мытье головы, стрижка, сушка с использованием укладочных средств",
-    "category_service": 1,
-    "price": "900.00",
-    "duration": 60,
-    "is_active": true
-  }
+    "model": "mainapp.categoryservice",
+    "pk": 1,
+    "fields": {
+        "name": "Стрижка женская",
+        "short_description": "различные стрижки для женщин",
+        "full_description": "Стрижка женская",
+        "hall": 1,
+        "is_active": true
+    }
+},
+{
+    "model": "mainapp.categoryservice",
+    "pk": 2,
+    "fields": {
+        "name": "дополнительные услуги для женщин",
+        "short_description": "Специальные имиджевые услуги",
+        "full_description": "Специальные имиджевые услуги",
+        "hall": 1,
+        "is_active": true
+    }
+},
+{
+    "model": "mainapp.categoryservice",
+    "pk": 3,
+    "fields": {
+        "name": "маникюр",
+        "short_description": "Маникюр-это в основном косметическая процедура для ногтей и рук",
+        "full_description": "Маникюр-это в основном косметическая процедура для ногтей и рук, выполняемая дома или в маникюрном салоне. Маникюр обычно состоит из подпиливания и придания формы свободному краю ногтей, выталкивания и подрезания (толкателем для кутикулы и кусачками для кутикулы) любой неживой ткани (но ограничивается кутикулой и заусеницами), обработки различными жидкостями, массажа руки и нанесения лака для ногтей.",
+        "hall": 2,
+        "is_active": true
+    }
+},
+{
+    "model": "mainapp.service",
+    "pk": 1,
+    "fields": {
+        "name": "Стрижка женская",
+        "short_description": "Стрижка женская",
+        "full_description": "мытье головы, стрижка, сушка с использованием укладочных средств",
+        "category_service": 1,
+        "price": "900.00",
+        "duration": 60,
+        "is_active": true
+    }
+},
+{
+    "model": "mainapp.service",
+    "pk": 2,
+    "fields": {
+        "name": "Окрашивание",
+        "short_description": "Включает в себя весь спектр колористического обслуживания: тотал блонд с тонированием; мелирование во всем многообразии техник; окрашивание тон в тон — перманентное, полуперманентное, нестойкое; коррекцию цвета и нейтрализацию нежелательных нюансов.",
+        "full_description": "Включает в себя весь спектр колористического обслуживания: тотал блонд с тонированием; мелирование во всем многообразии техник; окрашивание тон в тон — перманентное, полуперманентное, нестойкое; коррекцию цвета и нейтрализацию нежелательных нюансов.",
+        "category_service": 2,
+        "price": "2000.00",
+        "duration": 120,
+        "is_active": true
+    }
+},
+{
+    "model": "mainapp.service",
+    "pk": 3,
+    "fields": {
+        "name": "Завивка",
+        "short_description": "В списки услуг для волос салона-парикмахерской предпочтительнее вводить современные виды долговременной химической завивки, выполняемые на щадящих технологичных составах (например, Dulcia Advance от L’Oréal Professionnel и Opti.Wave от Matrix) с аминокислотами, протеинами, полимерами и другими восстанавливающими компонентами.",
+        "full_description": "В списки услуг для волос салона-парикмахерской предпочтительнее вводить современные виды долговременной химической завивки, выполняемые на щадящих технологичных составах (например, Dulcia Advance от L’Oréal Professionnel и Opti.Wave от Matrix) с аминокислотами, протеинами, полимерами и другими восстанавливающими компонентами.",
+        "category_service": 2,
+        "price": "1000.00",
+        "duration": 60,
+        "is_active": true
+    }
+},
+{
+    "model": "mainapp.service",
+    "pk": 4,
+    "fields": {
+        "name": "Классический маникюр",
+        "short_description": "Это один из самых популярных способов придать ногтям и коже рук ухоженный вид. Классический маникюр и педикюр начинают с корректировки формы ногтей. Далее, перед обработкой кутикулы, выполняют мацерацию — делают ванночку для размягчения кожи.\r\nопустите руки в ванночку",
+        "full_description": "Это один из самых популярных способов придать ногтям и коже рук ухоженный вид. Классический маникюр и педикюр начинают с корректировки формы ногтей. Далее, перед обработкой кутикулы, выполняют мацерацию — делают ванночку для размягчения кожи.\r\nопустите руки в ванночку\r\n\r\nЕще одна важная черта «классики» состоит в том, что эта техника предполагает срезание кутикулы щипчиками или маникюрными ножницами. У этой методики есть много противников: считается, что кутикулу опасно срезать — она защищает корень ногтя. Тем не менее многие девушки выбирают именно такую технику, потому что она позволяет добиться «чистого» результата перед нанесением покрытия. Как самостоятельно сделать классический маникюр, мы показывали в этом",
+        "category_service": 3,
+        "price": "1500.00",
+        "duration": 120,
+        "is_active": true
+    }
 }
 ]
